--- a/src/components/ConstructionSign.module.css
+++ b/src/components/ConstructionSign.module.css
@@ -4,7 +4,6 @@
   justify-content: center;
   align-items: center;
   background-color: black;
-  margin: auto;
   color: orange;
   overflow: hidden;
 }
@@ -14,7 +13,7 @@
 }
 
 .message h1 {
-  margin-bottom: 0.7rem;
+  margin: 0.7rem 0;
 }
 
 .border {
