--- a/src/index.css
+++ b/src/index.css
@@ -21,26 +21,21 @@ body {
 
 header {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  padding: 1rem;
-}
-
-header img {
-  height: 7rem;
-  margin: 0 auto;
+  padding: 1em;
 }
 
 main {
   flex: 1;
-}
-
-footer {
   display: flex;
   justify-content: center;
-  padding: 1rem;
+  align-items: baseline;
+  padding: 1em 23%;
 }
 
-.higlight {
-  background: linear-gradient(180deg, rgba(255, 255, 255, 0) 60%, orange 40%);
+@media only screen and (max-width: 667px) {
+  main {
+    padding: 1em;
+  }
 }
