--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,15 @@ main {
   padding: 1em;
 }
 
+footer {
+  text-align: center;
+  padding: 1em;
+}
+
+figure {
+  text-align: center;
+}
+
 @media only screen and (max-width: 667px) {
   main {
     padding: 1em;
@@ -18,11 +27,5 @@ main {
 }
 
 img.logo {
-  height: 5em;
-  margin: 1em;
-  transition: all 0.2s ease-in-out;
-}
-
-img.logo:hover {
-  transform: scale(1.1);
+  height: 3em;
 }
